tests/NormalTests/paczka1/fuzzy1/68596570.err
Error in line 1: A248 A45 70,0
Error in line 12: A248 A145 [1[,0
Error in line 11: TfU5 A634 5,4
Error in line 4: M5YS A248 89,0
Error in line 16: 5cfeg A145 314,4
Error in line 22: DSKhw A45 8,6
Error in line 26: DSKhw A145 -5,6
Error in line 24: DSKhw A145 87,0
Error in line 28: 8Y3OK A45 67,2
Error in line 27: DSKhw A45 19,6
Error in line 33: DSKhw A145 57,7
Error in line 23: 5cfeg A248 72,7
Error in line 39: 5cfeg A145 88,3
